2011-05-18  Ken Brown  <kbrown@cornell.edu>

	* Version 0.3 released.

2011-05-18  Ken Brown  <kbrown@cornell.edu>

	* README: Update documentation.
	* examples/README: Ditto.

2011-05-18  Ken Brown  <kbrown@cornell.edu>

	* Makefile.cygwin: Tweak 'install' target.  Add 'pkg' target.
	* Makefile.linux: Ditto.
	* Makefile.cygwin-mingw: Ditto.

2011-05-17  Ken Brown  <kbrown@cornell.edu>

	* INSTALL: Update.
	* README: Update.
	* Makefile.cygwin: Adapt 'install' target to changed executables.
	* Makefile.linux: Ditto.
	* Makefile.cygwin-mingw: Ditto.

2011-05-17  Ken Brown  <kbrown@cornell.edu>

	* toddcox.cc (main): Don't prompt for enumeration method.  Use HLT
	unless a different method is specified on the command line.
	(getmethod): Remove.
	(usage): New function.

2011-05-16  Ken Brown  <kbrown@cornell.edu>

	* TODO: Update.
	* coset.h (Coset): Rename get_act and set_act to getact and
	setact.  Declare new members getname(), setname(), getindex(),
	setindex(), isalive(), isdefined(), name, index.  Add name and
	index as parameters to constructor.
	* coset.cc: Adapt constructor to changes above.
	(print): Minor change.
	* cosettable.h (coset_enum_result, tab_iter, ctab_iter): New
	typedefs.
	(p): Remove.
	(hlt, hlt_plus, felsch): Make private.  Make threshold a parameter
	to hlt_plus.  Change return types to coset_enum_result.
	(enumerate): New public member function.
	(set_threshold): Remove.
	(threshold): Remove.
	(is_alive): Remove.  (Will use the corresponding member of Coset
	class instead.)
	(is_defined): Rename to...
	(isdefined): New member function, which uses the Coset class
	function of the same name.
	* cosettable.cc: Remove reference to p[] throughout; use Coset's
	getname instead.  Accomodate the name changes in Coset.  Use
	iterators instead of indexing to traverse coset table in several
	functions.
	(set_threshold): Remove.  Move functionality to hlt_plus.
	(define): Accommodate changes to Coset constructor.  Remove
	reference to p[].